--- a/Flask_Day1/templates/single-detail.html
+++ b/Flask_Day1/templates/single-detail.html
@@ -22,7 +22,9 @@
           <li class="nav-item">
             <a href="{{ url_for('batchall')}}" class="nav-link">批量脚本检测记录</a>
           </li>
-          <!-- <li class="nav-item"><a href="run.html" class="nav-link">脚本运行</a></li> -->
+          <li class="nav-item">
+            <a href="{{ url_for('run')}}" class="nav-link">脚本运行</a>
+          </li>
           <li class="nav-item">
             <a href="{{ url_for('scriptshow')}}" class="nav-link">脚本展示</a>
           </li>
@@ -56,7 +58,7 @@
             url: baseurl + "/detection/single/detail",
             method: "post",
             headers: {
-              Authorization: "Basic " + sessionStorage.getItem('token'),
+              Authorization: "Token " + sessionStorage.getItem('token'),
             },
             dataType: "json",
             contentType: "application/json; charset=UTF-8",
