--- a/Flask_Day1/templates/open-detection.html
+++ b/Flask_Day1/templates/open-detection.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ip列表</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
   </head>
   <body>
     <div class="container">
       <div class="nav-box">
         <ul class="nav">
           <li class="nav-item">
-            <a href="{{ url_for('iplist')}}" class="nav-link" aria-current="page"
+            <a href="/iplist" class="nav-link" aria-current="page"
               >ip列表</a
             >
           </li>
           <li class="nav-item">
-            <a href="{{ url_for('open_detection')}}" class="nav-link active"
+            <a href="/open-detection" class="nav-link active"
               >开启所有检测</a
             >
           </li>
           <li class="nav-item">
-            <a href="{{ url_for('single')}}" class="nav-link">单个脚本检测记录</a>
+            <a href="/single" class="nav-link">单个脚本检测记录</a>
           </li>
           <li class="nav-item">
-            <a href="{{ url_for('batchall')}}" class="nav-link">批量脚本检测记录</a>
+            <a href="/batchall" class="nav-link">批量脚本检测记录</a>
           </li>
-          <!-- <li class="nav-item"><a href="run.html" class="nav-link">脚本运行</a></li> -->
+          <li class="nav-item">
+            <a href="{{ url_for('run')}}" class="nav-link">脚本运行</a></li>
           <li class="nav-item">
             <a href="{{ url_for('scriptshow')}}" class="nav-link">脚本展示</a>
           </li>
@@ -50,8 +51,8 @@
       </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js')}}"></script>
-    <script src="{{ url_for('static', filename='js/main.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.5.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script>
       $(function () {
         fetchUserData();
@@ -60,7 +61,7 @@
             url: baseurl + "/verify/matchnames",
             method: "GET",
             headers: {
-              Authorization: "Basic " + sessionStorage.getItem('token'),
+              Authorization: "Token " + sessionStorage.getItem('token'),
             },
             success: function (data) {
               let htmlCont = "";
@@ -87,7 +88,7 @@
             url: baseurl + "/web/start/all",
             method: "post",
             headers: {
-              Authorization: "Basic " + sessionStorage.getItem('token'),
+              Authorization: "Token " + sessionStorage.getItem('token'),
             },
             dataType: "json",
             contentType: "application/json; charset=UTF-8",
